--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="#" class="Resume">Massively</a>
+						<a href="#" class="Resume">Resume</a>
 					</header>
 
 				<!-- Nav -->
@@ -40,7 +40,7 @@
 							<li><a href="elements.html">Elements Reference</a></li>-->
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-blog"><span class="label">Twitter</span></a></li>
+							<li><a href="https://datasciencewithfiddy.wordpress.com/" class="icon brands fa-blog"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-tableau"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-linkedin"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
@@ -190,7 +190,7 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://datasciencewithfiddy.wordpress.com/" class="icon brands alt fa-blog"><span class="label">Blog</span></a></li>
 									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
