Attached social link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="#" class="Resume">Resume</a>
+						<a href="#" class="logo">Resume</a>
 					</header>
 
 				<!-- Nav -->
@@ -40,10 +40,10 @@
 							<li><a href="elements.html">Elements Reference</a></li>-->
 						</ul>
 						<ul class="icons">
-							<li><a href="https://datasciencewithfiddy.wordpress.com/" class="icon brands fa-blog"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-tableau"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-linkedin"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://datasciencewithfiddy.wordpress.com/" class="fa-brands fa-wordpress"><span class="label">Blog</span></a></li>
+							<!--<li><a href="#" class="icon brands fa-tableau"><span class="label">Facebook</span></a></li>-->
+							<li><a href="https://www.linkedin.com/in/firdaws-yahya-196749154/" class="icon brands fa-linkedin"><span class="label">Instagram</span></a></li>
+							<li><a href="https://github.com/yfirdaws" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -190,10 +190,10 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="https://datasciencewithfiddy.wordpress.com/" class="icon brands alt fa-blog"><span class="label">Blog</span></a></li>
-									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://datasciencewithfiddy.wordpress.com/" class="fa-brands fa-wordpress"><span class="label">Blog</span></a></li>
+									<li><a href="https://www.linkedin.com/in/firdaws-yahya-196749154/" class="icon brands alt fa-linkedin"><span class="label">Facebook</span></a></li>
+									<!--<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>-->
+									<li><a href="https://github.com/yfirdaws" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
@@ -201,7 +201,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; Firdaws' portfolio</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
