--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>MY PORTFOLIO<br />
 						
-						<p>Hey, I am Firdaws. <a href="https://html5up.net/license"></a>.</p>
+						<p>Hey, I am Firdaws.This website is still a work in progress.Be patient with me <a href="https://html5up.net/license"></a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
