Added another project
Web srapping project

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">August, 2021</span>
+										<span class="date">2021</span>
 										<h2><a href="https://firdaws-loan-prediction-app.herokuapp.com/">Loan prediction<br />
 										with streamlit</a></h2>
 									</header>
@@ -81,14 +81,14 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<span class="date">2021</span>
+										<h2><a href="https://github.com/yfirdaws/web-scrapping">WEB SCRAPING:<br />
+										ECOMMERCE websites </a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/yfirdaws/web-scrapping" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+									<p>Using selenium, I scrapped groceries and their prices from various ecommerce platforms. These prices were then saved in a csv file.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://datasciencewithfiddy.wordpress.com/?s=web+scrapping" class="button">Learn more</a></li>
 									</ul>
 								</article>
 								<article>
