--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
 										<h2><a href="https://firdaws-loan-prediction-app.herokuapp.com/">Loan prediction<br />
 										with streamlit</a></h2>
 									</header>
-									<a href="https://firdaws-loan-prediction-app.herokuapp.com/" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="https://github.com/yfirdaws/Loan-prediction" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p>Are you the best fit for a loan? I make use of XGBoost to help predict a loan approval.This was then deployed using Streamlit and heroku. </p>
 									<ul class="actions special">
 
-										<li><a href="https://github.com/yfirdaws/Loan-prediction class="button">Github</a></li>
+										<li><a href="https://firdaws-loan-prediction-app.herokuapp.com/" class="button">Try it out!!</a></li>
 									</ul>
 								</article>
 								<article>
@@ -88,18 +88,18 @@
 									<a href="https://github.com/yfirdaws/web-scrapping" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 									<p>Using selenium, I scrapped groceries and their prices from various ecommerce platforms. These prices were then saved in a csv file.</p>
 									<ul class="actions special">
-										<li><a href="https://datasciencewithfiddy.wordpress.com/?s=web+scrapping" class="button">Learn more</a></li>
+										<li><a href="https://datasciencewithfiddy.wordpress.com/?s=web+scrapping" class="button">More</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">January 2022</span>
-										<h2><a href="#">RFM analysis</a></h2>
+										<h2><a href="https://github.com/yfirdaws/RFM-analysis/blob/main/RFM_analysis.ipynb">RFM analysis</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Coming soon.</p>
+									<p>Who are your champion customers?Loyal ones? churned customers?Promising ones?. Understand you customers using RFM analysis.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/yfirdaws/RFM-analysis/blob/main/RFM_analysis.ipynb" class="button">More</a></li>
 									</ul>
 								</article>
 								<article>
