--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 									<a href="https://github.com/yfirdaws/web-scrapping" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 									<p>Using selenium, I scrapped groceries and their prices from various ecommerce platforms. These prices were then saved in a csv file.</p>
 									<ul class="actions special">
-										<li><a href="https://datasciencewithfiddy.wordpress.com/?s=web+scrapping" class="button">More</a></li>
+										<li><a href="https://datasciencewithfiddy.wordpress.com/?s=web+scrapping" class="button">Read More</a></li>
 									</ul>
 								</article>
 								<article>
@@ -99,13 +99,13 @@
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 									<p>Who are your champion customers?Loyal ones? churned customers?Promising ones?. Understand you customers using RFM analysis.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/yfirdaws/RFM-analysis/blob/main/RFM_analysis.ipynb" class="button">More</a></li>
+										<li><a href="https://github.com/yfirdaws/RFM-analysis/blob/main/RFM_analysis.ipynb" class="button">Read More</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">2022</span>
-										<h2><a href="#">Sentiment analysis<br /></a></h2>
+										<h2><a href="#">Loading<br /></a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 									<p>..............................</p>
@@ -116,7 +116,7 @@
 								<article>
 									<header>
 										<span class="date">2022</span>
-										<h2><a href="#">Chatbot<br/></a></h2>
+										<h2><a href="#">Loading<br/></a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 									<p>..............</p>
