--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">2022</span>
-										<h2><a href="#">Loading<br /></a></h2>
+										<span class="date"> January 2022</span>
+										<h2><a href="#">Tableau Dashboards<br /></a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>..............................</p>
+									<p>Here are a collections of my Tableau dashboards as well as my journey with the visualization tools.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="https://public.tableau.com/app/profile/firdaws.yahya">Tableau Profile</a></li>
 									</ul>
 								</article>
 								<article>
@@ -127,7 +127,7 @@
 								<article>
 									<header>
 										<span class="date">2022</span>
-										<h2><a href="#">Regression<br /></a></h2>
+										<h2><a href="#">Loading<br /></a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 									<p>............................................</p>
