--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">2022</span>
-										<h2><a href="#">Loading<br/></a></h2>
+										<span class="date">February 2022</span>
+										<h2><a href="https://github.com/yfirdaws/Excel-sheets-dashboards">Excel Dashboards<br/></a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>..............</p>
+									<a href="https://github.com/yfirdaws/Excel-sheets-dashboards" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+									<p>Static dashboards or Dynamic, using the various features made available on excel, I create dashboards to help fully undestand what is going on in a data.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/yfirdaws/Excel-sheets-dashboards" class="button">Github</a></li>
 									</ul>
 								</article>
 								<article>
