--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="#" class="logo">Resume</a>
+						<a href="https://drive.google.com/file/d/1h1EsVpVPWwfeAac-kjtSCnVB7vp8w1Nc/view?usp=sharing" class="logo">Resume</a>
 					</header>
 
 				<!-- Nav -->
