--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 										<span class="date">February 2022</span>
 										<h2><a href="https://github.com/yfirdaws/Excel-sheets-dashboards">Excel Dashboards<br/></a></h2>
 									</header>
-									<a href="https://github.com/yfirdaws/Excel-sheets-dashboards" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+									<a href="https://github.com/yfirdaws/Excel-sheets-dashboards" class="image fit"><img src="images/pic06.png" alt="" /></a>
 									<p>Static dashboards or Dynamic, using the various features made available on excel, I create dashboards to help fully undestand what is going on in a data.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/yfirdaws/Excel-sheets-dashboards" class="button">Github</a></li>
