--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								<header class="major">
 	
 									<h2><a href="#">Here is what I Do</a></h2>
-									<p>Python.SQL.Excel.Tableau.Machine Learning.Market analytics.Selenium</p>
+									<p>Python.SQL.Excel.Tableau.Machine Learning.Market analytics.Selenium.PowerBI</p>
 								</header>
 								<a href="https://datasciencewithfiddy.wordpress.com/" class="image main"><img src="images/pic01.jpeg" alt="" /></a>
 								<ul class="actions special">
