--- a/About.html
+++ b/About.html
@@ -25,8 +25,9 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html">This is Massively</a></li>
-							<li class="active"><a href="generic.html">Generic Page</a></li>
+							<li><a href="index.html">HOME</a></li>
+							<li class="active"><a href="About.html">About</a></li>
+							<li><a href="https://datasciencewithfiddy.wordpress.com/">Blog</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
 						<ul class="icons">
