--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="https://drive.google.com/file/d/1h1EsVpVPWwfeAac-kjtSCnVB7vp8w1Nc/view?usp=sharing" class="logo">Resume</a>
+						<a href="https://drive.google.com/drive/u/3/folders/1pPV2necTajvLQnraOqxxFB2Lhsgbpw8V" class="logo">Resume</a>
 					</header>
 
 				<!-- Nav -->
@@ -162,13 +162,13 @@
 						<!-- Footer -->
 							<footer>
 								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
+									<!--<a href="#" class="previous">Prev</a>
 									<a href="#" class="page active">1</a>
 									<a href="#" class="page">2</a>
 									<a href="#" class="page">3</a>
 									<span class="extra">&hellip;</span>
 									<a href="#" class="page">4</a>
-									<a href="#" class="next">Next</a>
+									<a href="#" class="next">Next</a>-->
 								</div>
 							</footer>
 
