--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
 										<span class="date"> 2022</span>
 										<h2><a href="#">PowerBI Dashboards<br /></a></h2>
 									</header>
-									<a href="https://datasciencewithfiddy.wordpress.com/category/powerbi/" class="image fit"><img src="images/pic08.png" alt="" /></a>
+									<a href="https://www.novypro.com/profile_projects/firdaws-eleojo-yahya" class="image fit"><img src="images/pic08.png" alt="" /></a>
 									<p>Here are a collections of my PowerBI dashboards.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/yfirdaws/PowerBI-Dashboard" class="button">Github</a></li>
+										<li><a href="https://datasciencewithfiddy.wordpress.com/category/powerbi/" class="button">Github</a></li>
 									</ul>
 								</article>
 								<article>
