--- a/index.html
+++ b/index.html
@@ -157,6 +157,17 @@
 										<li><a href="#" class="button">Click</a></li>
 									</ul>
 								</article>
+								<article>
+									<header>
+										<span class="date"> 2022</span>
+										<h2><a href="#">Power Point Slides<br /></a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/pic09.jpg" alt="" /></a>
+									<p>---------</p>
+									<ul class="actions special">
+										<li><a href="#" class="button">Click</a></li>
+									</ul>
+								</article>
 							</section>
 
 						<!-- Footer -->
@@ -211,32 +222,7 @@
 									<!--<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>-->
 									<li><a href="https://github.com/yfirdaws" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
-							</section>
-							<article>
-								<header>
-									<span class="date"> January 2022</span>
-									<h2><a href="#">Tableau Dashboards<br /></a></h2>
-								</header>
-								<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-								<p>Here are a collections of my Tableau dashboards as well as my journey with the visualization tools.</p>
-								<ul class="actions special">
-									<li><a href="#" class="https://public.tableau.com/app/profile/firdaws.yahya">Tableau Profile</a></li>
-								</ul>
-							</article>
-							<article>
-								<header>
-									<span class="date">2021</span>
-									<h2><a href="https://firdaws-loan-prediction-app.herokuapp.com/">Loan prediction<br />
-									with streamlit</a></h2>
-								</header>
-								<a href="https://github.com/yfirdaws/Loan-prediction" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-								<p>Are you the best fit for a loan? I make use of XGBoost to help predict a loan approval.This was then deployed using Streamlit and heroku. </p>
-								<ul class="actions special">
-
-									<li><a href="https://firdaws-loan-prediction-app.herokuapp.com/" class="button">Try it out!!</a></li>
-								</ul>
-							</article>
-						</section>
+						
 					</footer>
 
 				<!-- Copyright -->
