--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="https://drive.google.com/drive/u/3/folders/1pPV2necTajvLQnraOqxxFB2Lhsgbpw8V" class="logo">Resume</a>
+						<a href="https://drive.google.com/file/d/1LhbTi4mq9SxjV1WCKf9H5-5IWmCum6BZ/view?usp=share_link" class="logo">Resume</a>
 					</header>
 
 				<!-- Nav -->
@@ -110,7 +110,7 @@
 									<a href="https://www.novypro.com/profile_projects/firdaws-eleojo-yahya" class="image fit"><img src="images/pic08.png" alt="" /></a>
 									<p>Here are a collections of my PowerBI dashboards.</p>
 									<ul class="actions special">
-										<li><a href="https://datasciencewithfiddy.wordpress.com/category/powerbi/" class="button">Github</a></li>
+										<li><a href="https://www.novypro.com/profile_projects/firdaws-eleojo-yahya" class="button">DashBoards</a></li>
 									</ul>
 								</article>
 								<article>
