--- a/About.html
+++ b/About.html
@@ -27,7 +27,7 @@
 						<ul class="links">
 							<li><a href="index.html">HOME</a></li>
 							<li class="active"><a href="About.html">About</a></li>
-							<li><a href="https://datasciencewithfiddy.wordpress.com/">Blog</a></li>
+							<li><a href="https://fiddysinsighthub.wordpress.com/">Blog</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
 						<ul class="icons">
