--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="https://datasciencewithfiddy.wordpress.com/">Blog</a></li>
+							<li><a href="https://fiddysinsighthub.wordpress.com//">Blog</a></li>
 							<!--<li><a href="About.html">Generic Page</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>-->
 						</ul>
