--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="https://drive.google.com/file/d/1LhbTi4mq9SxjV1WCKf9H5-5IWmCum6BZ/view?usp=share_link" class="logo">Resume</a>
+						<a href="https://drive.google.com/file/d/1HsqQzYu4pik9I5KaKFtS5zuGVtbDO4Pp/view?usp=sharing" class="logo">Resume</a>
 					</header>
 
 				<!-- Nav -->
@@ -108,7 +108,7 @@
 										<h2><a href="#">PowerBI Dashboards<br /></a></h2>
 									</header>
 									<a href="https://www.novypro.com/profile_projects/firdaws-eleojo-yahya" class="image fit"><img src="images/pic08.png" alt="" /></a>
-									<p>Here are a collections of my PowerBI dashboards.</p>
+									<p>Here is a collections of my PowerBI dashboards.</p>
 									<ul class="actions special">
 										<li><a href="https://www.novypro.com/profile_projects/firdaws-eleojo-yahya" class="button">DashBoards</a></li>
 									</ul>
@@ -188,7 +188,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<form method="post" action="#">
+							<form method="post" action="mailto:firdaws.eleojo.yahya@gmail.com">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
@@ -212,7 +212,7 @@
 		
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">firdaws.eleojo.yahya@gmail.com</a></p>
+								<p><a href="mailto:firdaws.eleojo.yahya@gmail.com">firdaws.eleojo.yahya@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
