--- a/About.html
+++ b/About.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="https://drive.google.com/file/d/1HsqQzYu4pik9I5KaKFtS5zuGVtbDO4Pp/view?usp=sharing" class="logo">Resume</a>
 					</header>
 
 				<!-- Nav -->
@@ -85,7 +85,7 @@
 							</form>
 						</section>
 						<section class="split contact">
-							<section class="alt">
+							<!--<section class="alt">
 								<h3>Address</h3>
 								<p>1234 Somewhere Road #87257<br />
 								Nashville, TN 00000-0000</p>
@@ -94,9 +94,9 @@
 								<h3>Phone</h3>
 								<p><a href="#">(000) 000-0000</a></p>
 							</section>
-							<section>
+							<section> -->
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<p><a href="mailto:firdaws.eleojo.yahya@gmail.com">firdaws-eleojo-yahya</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
