--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
 										<span class="date"> 2022</span>
 										<h2><a href="#">Power Point Slides<br /></a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic09.jpg" alt="" /></a>
-									<p>---------</p>
+									<a href="#" class="image fit"><img src="images/PIC10.png" alt="" /></a>
+									<p>This is the PowerPoint section of my portfolio, where I showcase my skills in creating stunning and effective presentations</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Click</a></li>
+										<li><a href="https://drive.google.com/drive/folders/1TxJhIWyOjEHa1Ee3XbRgqHB-iLiWUwB-?usp=sharing" class="button">Click</a></li>
 									</ul>
 								</article>
 							</section>
