Added written work section

--- a/index.html
+++ b/index.html
@@ -168,6 +168,17 @@
 										<li><a href="https://drive.google.com/drive/folders/1TxJhIWyOjEHa1Ee3XbRgqHB-iLiWUwB-?usp=sharing" class="button">Click</a></li>
 									</ul>
 								</article>
+								<article>
+									<header>
+										<span class="date"> 2022</span>
+										<h2><a href="#">Written Works<br /></a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/PIC11.png" alt="" /></a>
+									<p>This contains my written work like proposals, essays, research,case studies, use cases and other documentations</p>
+									<ul class="actions special">
+										<li><a href="https://hurricane-raccoon-08a.notion.site/FIRDAWS-WORK-d57f4d4b919f421cb3f96ac54e1aafae?pvs=4" class="button">Click</a></li>
+									</ul>
+								</article>
 							</section>
 
 						<!-- Footer -->
