--- a/About.html
+++ b/About.html
@@ -47,14 +47,14 @@
 									<span class="date">July 17, 2023</span>
 									<h1>Hi! I'm Firdaws Yahaya<br />
 									Welcome to my portfolio</h1>
-									<p> A data analyst with a passion for sustainability, research, and data science. <br />
+									<p> A data analyst with a passion for sustainability, research, and technology. <br />
 							            I love finding insights from data and using them to solve real-world problems and create positive impact..</p>
 								</header>
 								<div class="image main"><img src="images/pic01.jpg" alt="" /></div>
-								<p>I'm a passionate research analyst with a strong drive for making a positive impact through technology and data-driven solutions. I believe in the power of leveraging insights to drive meaningful change and contribute to a sustainable future. With a background in Computer Science and a keen interest in business analysis and AI for social good, I am dedicated to utilizing my skills and expertise to address key challenges aligned with the Sustainable Development Goals (SDGs).</p>
-								<p>Professionally, I have honed my skills in qualitative and quantitative research, data analysis, and strategy development. With proficiency in Python, SQL, Excel, and PowerBI, I excel in interpreting complex datasets and transforming them into actionable insights. My ability to present these insights in a simplified manner enables me to effectively communicate with diverse audiences.</p>
-								<p>Throughout my career, I have had the opportunity to work on a range of projects that have expanded my knowledge and expertise. From participating in the Hult Prize competition and contributing to mapping assessments for prestigious UN and World Bank projects, to my current role as a research analyst, I have gained valuable experience in driving impactful change. I thrive in collaborative environments, working closely with stakeholders to identify issues, propose solutions, and drive projects forward.</p>
-								<p>Beyond my professional pursuits, I am passionate about sustainability, gender equality, education, and climate change. I believe in leveraging technology and data to address these critical issues and contribute to a more equitable and sustainable world. In my spare time, I enjoy reading, writing on my tech blog, and volunteering for education-related projects.</p>
+								<p>I'm passionate about building impactful products and leveraging technology to streamline processes and enhance efficiency. With a diverse skill set spanning analysis, writing, and presentation, I thrive in dynamic environments where I can contribute value and continue learning.</p>
+								<p>My career has led me across various industries and projects, including AI, business, SDGs, sustainability, and education. Through these experiences, I've learned valuable lessons from failures and successes alike.</p>
+								<p>I'm driven by challenges and collaboration, valuing both personal growth and delivering high-quality results. With a commitment to excellence, I'm eager to find opportunities where I can make a difference and continue growing.</p>
+								<p>Outside of work, I am deeply passionate about sustainability, education, and addressing climate issues. I firmly believe in using technology,knowledge and data to tackle these pressing challenges and foster a more equitable and sustainable global community. During my free time, I immerse myself in reading, blogging, and volunteering.".</p>
 								<p>I invite you to explore my portfolio, where you can find examples of my work, projects, and blog posts. Feel free to connect with me on LinkedIn for further engagement and collaboration opportunities. Let's make a positive impact together!</p>
 								<p>Thank you for visiting my portfolio, and I look forward to connecting with you!</p>
 							</section>
